--- a/_config.yml
+++ b/_config.yml
@@ -30,31 +30,30 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-subtitle: Your awesome subtitle
+title: Estrella's blog
+subtitle: for routine development or ideas
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the demo site for a Jekyll theme version of
-  HTML5 UP's sleek, responsive site template Prologue.
-author: estrella-kim
-email:
-avatar: assets/images/avatar.jpg
+  This is site for recoding routine development, memos, organized materials of Estrella kim.
+author: estrella-kim1
+email: puris38@naver.com
+#avatar: assets/images/avatar.jpg
 # You'll want to customize url and baseurl for your own site:
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "" # the base hostname & protocol for your site
 
 # Social settings
-facebook_url:
-github_url:
-googleplus_url:
-instagram_url:
-linkedin_url:
-pinterest_url:
-slack_url:
-twitter_url:
+#facebook_url:
+#github_url:
+#googleplus_url:
+#instagram_url:
+#linkedin_url:
+#pinterest_url:
+#slack_url:
+#twitter_url:
 
 # Google Analytics Tracking ID goes here:
-google_analytics:
+#google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
 theme: jekyll-theme-prologue
-collections: [sections]
+#collections: [sections]
